--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   
   <label for="leagueId">Informe o League ID:</label><br>
   <input type="text" id="leagueId" placeholder="Ex: 1234567890"><br>
-  <button onclick="buscar()">Buscar</button>
+  <button onclick="buscar()">Vamos ver</button>
   
   <div id="resultado"></div>
   
