--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </style>
 </head>
 <body>
-  <h1>Status dos Jogadores (Sleeper)</h1>
+  <h1>Hora dos Ajustes - Quem tá ok e Quem tá fora?(Sleeper)</h1>
   
   <label for="leagueId">Informe o League ID:</label><br>
   <input type="text" id="leagueId" placeholder="Ex: 1234567890"><br>
