--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 	
-  <title>Status Jogadores - Sleeper</title>
+  <title>Status Jogadores - Sleeper - v.3 </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -64,6 +64,7 @@
   </style>
 </head>
 <body>
+	Aquela ajudinha para conferir os jogadores que tão fora da rodada.
   <h1>Hora dos Ajustes - Quem tá ok e Quem tá fora?(Sleeper)</h1>
   
   <label for="leagueId">Informe o League ID:</label><br>
