--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
 	Aquela ajudinha para conferir os jogadores que tão fora da rodada.
-  <h1>Hora dos Ajustes - Quem tá ok e Quem tá fora?(Sleeper) - v15092502 </h1>
+  <h1>Hora dos Ajustes - Quem tá ok e Quem tá fora?(Sleeper) - v15092503 </h1>
   
   <label for="leagueId">Informe o League ID:</label><br>
   <input type="text" id="leagueId" placeholder="Ex: 1234567890"><br>
@@ -110,12 +110,19 @@
         }
       }
 
+      // Adiciona nome do time (se houver) e ordena alfabeticamente
+      rosters.forEach(r => {
+        r.ownerName = userMap[r.owner_id] || "Time sem dono";
+        r.teamName = r.metadata?.team_name || "Sem nome definido";
+      });
+
+      rosters.sort((a, b) => a.teamName.localeCompare(b.teamName));
+
       // Monta times
       rosters.forEach(r => {
-        const ownerName = userMap[r.owner_id] || "Time sem dono";
         const teamDiv = document.createElement("div");
         teamDiv.className = "team";
-        teamDiv.innerHTML = `<h2>${ownerName}</h2>`;
+        teamDiv.innerHTML = `<h2>${r.teamName} — ${r.ownerName}</h2>`;
 
         // Titulares
         const startersSection = document.createElement("div");
@@ -125,32 +132,7 @@
         let startersCount = 0;
         (r.starters || []).forEach(id => {
           const p = players[id];
-          if (p?.injury_status && p.injury_status !== "Healthy") {
-            startersCount++;
-            const color = getStatusColor(p.injury_status);
-            const card = document.createElement("div");
-            card.className = "player-card";
-            card.innerHTML = `
-              <strong>${p.full_name}</strong> (${p.position}, ${p.team || "FA"})<br>
-              Status: <span style="color:${color}; font-weight:bold;">${p.injury_status}</span>
-            `;
-            startersSection.appendChild(card);
-          }
-        });
-
-        if (startersCount === 0) {
-          startersSection.innerHTML += "<p><em>Nenhum titular com status relevante.</em></p>";
-        }
-
-        teamDiv.appendChild(startersSection);
-        resultado.appendChild(teamDiv);
-      });
-    } catch (err) {
-      resultado.innerHTML = "<p style='color:red;'>Erro ao buscar dados. Verifique o League ID.</p>";
-      console.error(err);
-    }
-  }
-</script>
+          if (p?.injury_s_
 
 </body>
 </html>
