--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
 	
-  <title>Status Jogadores - Sleeper - v.5 - 15/09 </title>
+  <title>Status Jogadores - Sleeper - v.6 - 15/09 </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -17,7 +17,7 @@
       justify-content: flex-start;
       background: 
         linear-gradient(to right, rgba(244, 244, 244, 0.95) 60%, rgba(244, 244, 244, 0.2) 80%, transparent 100%),
-        url('A_digital_illustration_depicts_a_football_coach_wi.png') no-repeat right center fixed;
+        url('https://i.ibb.co/9mWwdssF/chatgpt-jogadoresquestionaveis.png') no-repeat right center fixed;
       background-size: auto 100%;
     }
 
@@ -113,7 +113,7 @@
 <body>
   <div class="content">
     Aquela ajudinha para conferir os jogadores que tão fora da rodada.
-    <h1>Hora dos Ajustes - Quem tá ok e Quem tá fora? (Sleeper) - v15092505</h1>
+    <h1>Hora dos Ajustes - Quem tá ok e Quem tá fora? (Sleeper)</h1>
     
     <label for="leagueId">Informe o League ID:</label><br>
     <input type="text" id="leagueId" placeholder="Ex: 1234567890"><br>
@@ -205,5 +205,6 @@
     }
   }
 </script>
+	<br>v15092506
 </body>
 </html>
