--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 </head>
 <body>
   <div class="content">
-    Aquela ajudinha para conferir os jogadores que tão fora da rodada.
-    <h1>Hora dos Ajustes - Quem tá ok e Quem tá fora? (Sleeper)</h1>
+    beta.06
+    <h1>Awaken- Uma revisão dos jogadores não saudáveis no Sleeper Fantasy</h1>
     
     <label for="leagueId">Informe o League ID:</label><br>
     <input type="text" id="leagueId" placeholder="Ex: 1234567890"><br>
@@ -205,6 +205,6 @@
     }
   }
 </script>
-	<br>v15092506
+	
 </body>
 </html>
