--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       justify-content: flex-start;
       background: 
         linear-gradient(to right, rgba(244, 244, 244, 0.95) 60%, rgba(244, 244, 244, 0.2) 80%, transparent 100%),
-        url('A_digital_illustration_depicts_a_football_coach_wi.png') no-repeat right center fixed;
+        url('https://i.ibb.co/9mWwdssF/chatgpt-jogadoresquestionaveis.png') no-repeat right center fixed;
       background-size: auto 100%;
       color: #222;
     }
