--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         });
 
         if (startersCount === 0) {
-          startersSection.innerHTML += "<p><em>Nenhum titular com status relevante.</em></p>";
+          startersSection.innerHTML += "<p><em>Tudo pronto, GM. Agora é orar, irmão.</em></p>";
         }
 
         teamDiv.appendChild(startersSection);
