--- a/index.html
+++ b/index.html
@@ -179,8 +179,7 @@
   <button id="darkModeBtn">🌙 Dark Mode</button>
 
   <div class="content">
-    <h1>Hora dos Ajustes - Quem tá ok e Quem tá fora? (Sleeper) - v15092506</h1>
-    <p>Aquela ajudinha para conferir os jogadores que tão fora da rodada.</p>
+    <p>Aquela ajudinha para conferir os jogadores que tão fora da rodada no Sleeper Fantasy da NFL.</p>
     
     <h3>🔎 Buscar por League ID</h3>
     <input type="text" id="leagueId" placeholder="Ex: 1234567890"><br>
